<resources>
    <string name="app_name">Peela Bus</string>
    <string name="title_activity_main">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_notifications">Notifications</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_notification_settings">Notification Settings</string>
    <string name="title_track_my_bus">TRACK MY BUS</string>
    <string name="title_alerts">ALERTS</string>
    <string name="title_profiles">PROFILE</string>
    <string name="title_share">NOTIFICATION SETTINGS</string>
    <string name="title_help">HELP &amp; FEEDBACK</string>

    <string name="map_type_none">None</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="title_activity_child">CHILDREN PROFILE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="check_network_status">Checking Network Stability…</string>
    <string name="login">Login</string>
    <string name="hint_password">Password</string>
    <string name="email_or_mobile_number">Email or Mobile Number</string>
    <string name="forgot_your_password">Forgot Your Password</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="next">NEXT</string>
    <string name="done">DONE</string>
    <string name="otp">Enter Your OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="reset_password_text">Reset Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="validating_data">Validating your information…</string>

    <!--dummy strings-->


    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Logged in !</string>
    <string name="signed_out">You are not logged in !</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Login</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="track_my_bus">Track My Bus</string>
    <string name="alerts">Alerts</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="title_activity_alert">AlertActivity</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="parents_info">PARENTS INFO</string>
    <string name="parent_name">PARENT NAME</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="email">EMAIL</string>
    <string name="alternative_mobile_number">Alternative Mobile Number</string>


    <!--<string name="directionsApiKey">AIzaSyCFVfSrSm3AONhiPBHJPexGdRJFrgw8fUc</string>-->

    <!--Notification Alerts screen strings-->
    <string name="pick_up_text_heading">Pickup Location</string>
    <string name="drop_text_heading">Drop Location</string>
    <string name="pick_up_header">PICKUP</string>
    <string name="drop_header">DROPPING</string>
    <string name="get_notifications_before">Get Alerts Before</string>
    <string name="two_min">2 MIN</string>
    <string name="five_min">5 MIN</string>
    <string name="ten_min">10 MIN</string>
    <string name="name_of_the_student">NAME OF THE STUDENT</string>
    <string name="student_class">Class</string>
    <string name="_1st_class">1 st Class</string>
    <string name="section">Section</string>
    <string name="buss_number">Buss Number</string>
    <string name="key_parent_details">ParentDetails</string>
    <string name="title_activity_track_my_bus">Map</string>
</resources>
