<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Alert.AlertsFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/card"
        android:layout_below="@id/card_1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="12dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header"
            android:background="@color/pickup_drop_card_header"
            android:orientation="horizontal">

            <!--image not available-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:padding="8dp"
            android:id="@+id/header_text"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/pick_up_header"
            />
        </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_below="@id/header"
                android:layout_marginTop="12dp"
                android:id="@+id/head_text"
                android:hint="@string/pick_up_text_heading"
                android:textColor="@color/TextColor.DarkGray"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/head_text"
                android:layout_marginTop="4dp"
                android:text="address"
                android:id="@+id/pick_or_drop_point_address"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/get_alerts_header"
                android:text="@string/get_notifications_before"
                android:layout_below="@+id/pick_or_drop_point_address"
                android:layout_marginTop="12dp"/>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_below="@id/get_alerts_header"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/two_min_button"
                    android:layout_margin="8dp"
                    android:background="@drawable/notify_alerts_button_bg"
                    android:textColor="@color/TextColor.Gray"
                    android:text="@string/two_min"/>

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/five_min_button"
                    android:layout_margin="8dp"
                    android:background="@drawable/notify_alerts_button_bg"
                    android:textColor="@color/TextColor.Gray"
                    android:text="@string/five_min"/>

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ten_min_button"
                    android:layout_margin="8dp"
                    android:background="@drawable/notify_alerts_button_bg"
                    android:textColor="@color/TextColor.Gray"
                    android:text="@string/ten_min"/>

            </android.support.v7.widget.LinearLayoutCompat>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>