<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="70dp">

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/footer_yellow_button_height"
            android:layout_below="@+id/view_button_body"
            android:layout_centerHorizontal="true"
            android:id="@+id/ok_button"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:minWidth="150dp"
            android:layout_marginTop="-20dp"
            android:background="@drawable/curved_button"
            android:text="@string/forgot_password"
            style="@style/yellow_button"/>
        <LinearLayout
            android:id="@+id/view_button_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/loginlayout"
            android:gravity="center_horizontal"
            android:weightSum="1"
            android:orientation="vertical"
            android:paddingBottom="70dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/login_body_view_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/forgot_your_password"
                style="@style/logintitle"
                android:textSize="@dimen/logname" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:id="@+id/textInputLayout1"
                android:layout_weight="0.08">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editText1"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    style="@style/formlabel"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:visibility="gone"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:id="@+id/textInputLayout2"
                android:layout_weight="0.08">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editText2"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_mobile_number"
                    style="@style/formlabel"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </RelativeLayout>
